# RE-Pro

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  launch_gui.bat  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: app.js  index.html  site.css  supported-formats.md
docs/examples/: README.md
docs/screenshots/: README.md
plugins/: README.md  example_plugin.py.sample
scripts/: build_windows_release.ps1
src/re_pro/: analysis_diff.py  analysis_index.py  android_resources.py  api_semantics.py  asar_tools.py  background_launch.py  cli.py  console_formats.py  ddl.py  dependency_installer.py  dex.py  dotnet_bundle.py  dotnet_resources.py  elf.py  engine.py  fixture_regression.py  frida_runner.py  frontend_reconstruct.py  gdeflate.py  gui.py  index_ingest.py  index_workflows.py  json_schemas.py  live_process.py  llm_assist.py  llm_auth.py  mcp_launch.py  mcp_server.py  models.py  msvc_pseudo_cpp.py  msvc_rtti.py  output_organizer.py  pe_resources.py  plugins.py  profiles.py  psarc.py  psp.py  psp_tools.py  recompile.py  recovery_insights.py  (+10 more)
src/re_pro/analyzers/: __init__.py  android.py  apple.py  base.py  console.py  dotnet.py  electron.py  external_tools.py  game.py  installer.py  java.py  linux_package.py  live_process.py  llm.py  native.py  pdb.py  pe.py  porting.py  python_packaged.py  resources.py  runtime_trace.py  tauri.py  wasm.py
src/re_pro/analyzers/external_tools/: __init__.py  analyzer.py
src/re_pro/frontend_reconstruct/: __init__.py  core.py  helpers.py  lifting.py
src/re_pro/ghidra_scripts/: REProExport.py
src/re_pro/gui/: __init__.py  log_window.py  main_window.py  workers.py
src/re_pro/msvc_pseudo_cpp/: __init__.py  _internals.py  _text.py
src/re_pro_dotnet_helper/: Program.cs  RePro.DotNetHelper.csproj
tests/: __init__.py  test_actual_binaries.py  test_analysis_diff.py  test_analysis_index.py  test_android.py  test_api_semantics.py  test_apple.py  test_asar_tools.py  test_background_launch.py  test_cli_architecture_port.py  test_cli_external_tools.py  test_cli_fixture_regression.py  test_cli_profiles.py  test_console_formats.py  test_console_real_samples.py  test_ddl.py  test_dependency_installer.py  test_dotnet.py  test_electron.py  test_engine.py  test_external_tools.py  test_fixture_regression.py  test_frameworks.py  test_game.py  test_gui_profiles.py  test_index_workflows.py  test_installers.py  test_java.py  test_json_schemas.py  test_linux_package.py  test_live_process.py  test_llm.py  test_mcp.py  test_msvc_pseudo_cpp.py  test_native.py  test_output_organizer.py  test_packer_detection.py  test_pdb.py  test_pe_resources.py  test_plugins.py  (+17 more)
tools/frontend-ast/: package-lock.json  package.json  repro_frontend_ast.mjs
