[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-pro"
version = "0.1.0"
description = "Reverse-engineering workbench for executable analysis, recovery, and decompilation orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Brotli>=1.1",
  "capstone>=5.0",
  "cryptography>=42",
  "mcp>=1.27,<2",
  "openai>=1.0",
  "PyQt5>=5.15",
  "rich>=13",
]

[project.scripts]
re-pro = "re_pro.cli:main"
re-pro-gui = "re_pro.gui:main"
re-pro-mcp = "re_pro.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  "analysis_output",
  "oc_analysis_output",
  "profiles",
  "samples",
  "tools",
]
