[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-pro"
version = "0.1.1"
description = "Reverse-engineering workbench for executable analysis, recovery, and decompilation orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Brotli>=1.1",
  "capstone>=5.0",
  "cryptography>=42",
  "mcp>=1.27,<2",
  "openai>=1.0",
  "PyQt5>=5.15",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
re-pro = "re_pro.cli:main"
re-pro-gui = "re_pro.gui:main"
re-pro-mcp = "re_pro.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  "analysis_output",
  "oc_analysis_output",
  "profiles",
  "samples",
  "tools",
]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["re_pro"]
omit = [
  "src/re_pro/gui.py",
  "src/re_pro/mcp_server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "analysis_output",
  "oc_analysis_output",
  "profiles",
  "samples",
  "tools",
  "src/re_pro_dotnet_helper",
  "src/re_pro/ghidra_scripts",
]

[tool.ruff.lint]
# Conservative initial rule set so this can land without a sweeping rewrite of
# the existing codebase. Tighten in follow-up PRs.
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
]
ignore = [
  "E501",  # line length is handled by the formatter; many existing lines exceed 120
  "E402",  # module-level imports below platform guards are intentional
  "E731",  # lambda assignments are used as small callbacks
  "E741",  # ambiguous variable names (`l`, `I`, `O`) appear in parsers
  "B008",  # function calls in argument defaults are used for dataclass field factories
  "B007",  # unused loop variables are common in zip iterations
  "B905",  # `zip(..., strict=...)` would require auditing every call site
  "B904",  # exception chaining is not consistently enforced yet
  "UP007", # `Optional[X]` -> `X | None` would touch hundreds of signatures
  "UP006", # `List` -> `list` likewise
  "UP035", # deprecated typing imports — same migration concern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# Package __init__.py files deliberately re-export upstream names onto the
# package namespace so that tests can patch and downstream callers can keep
# their existing import paths after the monoliths were split into packages.
"src/re_pro/gui/__init__.py" = ["F401"]
"src/re_pro/analyzers/external_tools/__init__.py" = ["F401"]
"src/re_pro/frontend_reconstruct/__init__.py" = ["F401"]
"src/re_pro/msvc_pseudo_cpp/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src/re_pro"]
exclude = "src/re_pro/ghidra_scripts/"
ignore_missing_imports = true
follow_imports = "silent"
# Strictness is deliberately low for the initial rollout — the codebase is
# already mostly typed, and ratcheting can happen in follow-up PRs.
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "re_pro.gui"
ignore_errors = true

[[tool.mypy.overrides]]
module = "re_pro.mcp_server"
ignore_errors = true
